# Proyecto_Estadistica_App

./: 14 Análisis de correlación y regresión multivariable en Excel (2025).xlsx  20251010 Análisis de correlación y regresión bivariable (introducción).xlsx  Graphs.py  Probability.py  README.md  Regression.py  Statistics.py  Tabla.py  Visuals.py  app.py  app_v2.py  pyproject.toml  requirements.txt
CONTEXT/: ARCHITECTURE.md  BUGS_AND_ISSUES.md  MIGRATION_PLAN.md  UI_COMPONENTS.md  V2_INVENTORY.md
docs/: 02 Cálculo del tamaño de una muestra.xlsx  Estimación_por_intervalos_de_confianza.xlsx
misc/: 2025BD-RStudio.xlsx  Ejercicio en clase estadistica2.xlsx  Estimación por intervalos de confianza.xlsx  S1101 Distribución Chi cuadrado (categorización).xlsx  ejemplo_formato_chi_cuadrado.xlsx  prueba_chi_cuadrado.xlsx
misc/cosas_a_agregar/: 1.py  2.py  3.py  4.PY  Plantilla intervalose de confianza medias.xlsx  Plantilla_IC_Diferencia_Medias.xlsx  Plantilla_IC_Una_Muestra.xlsx  Prueba Determinar una muestra.xlsx  Pruebas Estimación puntual.xlsx  Pruebas Intervalos de confianza PF.xlsx
misc/cosas_a_agregar/PortaEstadistica/: pp.py
src/Estadistica Descriptiva/: main.py
src/Estadistica Descriptiva/controllers/: app_controller.py
src/Estadistica Descriptiva/models/: table.py
src/Estadistica Descriptiva/utils/: graphs.py  inference.py  inference_graphs.py  probability.py  regression.py  sampling.py  statistics.py  trends.py
src/Estadistica Descriptiva/views/: theme.py  (+8 more)
tests/: conftest.py  test_probability.py  test_regression.py  test_statistics.py  test_trends.py
(+4 files in other folders)
