[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "estadistica-descriptiva"
version = "3.0.0"
description = "Aplicación de estadística descriptiva con interfaz gráfica CustomTkinter"
requires-python = ">=3.11"

dependencies = [
    "customtkinter>=5.2.2",
    "darkdetect>=0.8.0",
    "matplotlib>=3.6.0",
    "numpy>=1.23.0",
    "pandas>=1.5.0",
    "scipy>=1.9.0",
    "openpyxl>=3.0.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
estadistica = "estadistica_descriptiva.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src/Estadistica Descriptiva"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
